kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:
    app: kibana
  # type: NodePort
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
      # nodePort: 30000
